--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,7 @@
 
 .work-div{
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: contain;
     background-position: center;
     height: 250px;
     
